<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="Ad Logs"
        android:textColor="@color/red"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/top_bar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/banner_request"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/banner_impression"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/native_ad_request"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/native_ad_impression"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/interstitial_request"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:foreground="?selectableItemBackgroundBorderless"
            android:text="@string/interstitial_impression"
            android:textSize="14sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>